--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@ a:visited {
   color: gray;
 }
 
+.hero-header {
+  font-size: 3em;
+}
+
+.hero-sub-header {
+  font-size: 1.5em;
+}
+
 ul li:not(:last-child) {
   border-right: 1px solid grey;
   margin-right: 70px;
