--- a/src/App.css
+++ b/src/App.css
@@ -25,26 +25,32 @@ a:-webkit-any-link {
 a,
 a:focus,
 a:active {
-  color: #f2f2f2;
+  color: #fff;
   text-decoration: none;
 }
 
 a:visited {
-  color: gray;
+  color: #fff;
 }
 
 .hero-header {
   font-size: 3em;
+  padding-top: 25px;
 }
 
 .hero-sub-header {
   font-size: 1.5em;
 }
 
+.header-nav {
+  margin: 0 auto;
+  padding-top: 15px;
+}
+
 ul li:not(:last-child) {
-  border-right: 1px solid grey;
-  margin-right: 70px;
-  padding-right: 70px;
+  border-right: 1px solid white;
+  margin-right: 90px;
+  padding-right: 90px;
 }
 
 @keyframes App-logo-spin {
