--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,27 @@ ul li:not(:last-child) {
   padding-right: 90px;
 }
 
+hr {
+  border-width: 3px;
+  max-width: 70px;
+  margin-top: 20px;
+}
+
+.circular--landscape {
+  display: inline-block;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.circular--landscape img {
+  width: auto;
+  height: 100%;
+  margin-left: -70px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
