--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ a:visited {
 .hero-header {
   font-size: 3em;
   margin: 0;
-  padding-top: 180px;
+  padding-top: 275px;
 }
 
 .hero-sub-header {
@@ -33,7 +33,7 @@ a:visited {
 }
 
 .about-section {
-  width: 50%;
+  max-width: 45%;
   margin: 0 auto;
   text-align: center;
 }
@@ -57,6 +57,15 @@ ul li:not(:last-child) {
   width: auto;
   height: 100%;
   margin-left: -70px;
+}
+
+hr {
+  margin: 30px auto;
+  border-width: 3px;
+  border: 0;
+  border-top: 3px solid;
+  max-width: 50px;
+  border-color: #712f79;
 }
 
 @keyframes App-logo-spin {
