--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,10 @@ a:-webkit-any-link {
 
 a,
 a:focus,
-a:active {
-  color: #333;
-  text-decoration: none;
-}
-
+a:active,
 a:visited {
-  color: #333;
+  color: #fff;
+  text-decoration: none;
 }
 
 .hero-header {
@@ -30,6 +27,10 @@ a:visited {
 .header-nav {
   margin: 0 auto;
   padding: 5px 0px;
+}
+
+.nav-holder {
+  background-color: #190933;
 }
 
 .about-section {
@@ -65,7 +66,7 @@ hr {
   border: 0;
   border-top: 3px solid;
   max-width: 50px;
-  border-color: #712f79;
+  border-color: #190933;
 }
 
 @keyframes App-logo-spin {
