--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ a:visited {
   background-color: #190933;
 }
 
-.about-section {
-  max-width: 45%;
+.about-container {
+  max-width: 50%;
   margin: 0 auto;
   text-align: center;
 }
