--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,14 @@ a:visited {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .about-container {
   max-width: 50%;
   margin: 0 auto;
   text-align: center;
+  padding: 20px 0;
 }
 
 ul li:not(:last-child) {
@@ -75,4 +77,15 @@ ul li:not(:last-child) {
   to {
     transform: rotate(360deg);
   }
+}
+
+.dbc-pic {
+  width: 40%;
+  margin: 20px 0px 10px 15px;
+  border-radius: 2%;
+}
+
+.social-media {
+  width: 100px;
+  padding: 20px;
 }
